refactor: update patient-detail to use shared components

--- a/frontend/src/app/features/dashboard/doctor/components/patient-detail/patient-detail.component.html
+++ b/frontend/src/app/features/dashboard/doctor/components/patient-detail/patient-detail.component.html
@@ -130,14 +130,15 @@
         @switch (activeTab()) { @case ('profile') {
         <app-patient-profile-tab [profile]="patientProfile" />
         } @case ('history') {
-        <app-patient-history-tab
+        <app-history-tab
           [timeline]="timeline()"
           [patientId]="patientId()!"
+          [isPatientView]="false"
         />
         } @case ('statistics') {
-        <app-patient-statistics-tab [statistics]="statistics()" />
+        <app-statistics-tab [statistics]="statistics()" />
         } @case ('charts') {
-        <app-patient-charts-tab
+        <app-charts-tab
           [timeline]="timeline()"
           [statistics]="statistics()"
         />
