--- a/frontend/src/app/features/dashboard/doctor/components/my-patients/my-patients-list.component.html
+++ b/frontend/src/app/features/dashboard/doctor/components/my-patients/my-patients-list.component.html
@@ -271,7 +271,7 @@
             >
               <div class="flex items-center justify-end space-x-3">
                 <a
-                  [routerLink]="['/dashboard/patient', patient.id]"
+                  [routerLink]="['/dashboard/doctor/patient', patient.id]"
                   class="text-violet-600 hover:text-violet-900"
                   >Ver Detalhes</a
                 >
